--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,20 @@ paginate_path: ":num"
 exclude: [LICENSE, CNAME, README.md, .gitignore, Gemfile, Gemfile.lock, Procfile, vendor, gems]
 permalink: :title
 
-# Theme customization - please change from the defaults!
-theme:
-  # Color for top bar, links, etc
-  highlight_color: '#0071bc'
-  show_disclaimer: true
+title: dbyll
+description: Stylish Jekyll Theme
+author:
+  name: dbyll
+  email: dbyll@ismaildemirbilek.com
+  github: dbtek
+  twitter: asd123
+  pinterest: asd123
+  linkedin: asd123
+  bio: Your stylish, minimalist theme!
+  email_md5: 726351295ec82e145928582f595aa3aa
+
+rss_path: feed.xml
+categories_path: categories.html
+tags_path: tags.html
+
+BASE_PATH: http://dbtek.github.io/dbyll
