--- a/_config.yml
+++ b/_config.yml
@@ -7,20 +7,16 @@ paginate_path: ":num"
 exclude: [LICENSE, CNAME, README.md, .gitignore, Gemfile, Gemfile.lock, Procfile, vendor, gems]
 permalink: :title
 
-title: dbyll
-description: Stylish Jekyll Theme
+title: something Blogs
+description: diaries written on sticky notes
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: asd123
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  name: something Blogs
+  twitter: somethinglabs
+  bio: diaries written on sticky notes
 
 rss_path: feed.xml
 categories_path: categories.html
 tags_path: tags.html
 
 BASE_PATH: http://dbtek.github.io/dbyll
+ROOT_PATH: http://www.somethinglabs.com
