--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,4 @@ categories_path: categories.html
 tags_path: tags.html
 
 BASE_PATH: http://dbtek.github.io/dbyll
-ROOT_PATH: http://www.somethinglabs.com
+ROOT_PATH: http://blog.somethinglabs.com
